2024-04-15T16:09:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8692426368 # 185
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-15
* notice: last 14d: unq all: 115 183
* notice: prev accum: outdated-unq outdated-all / unq all: 3024 7240 / 3147 7422
* notice: next accum: outdated-unq outdated-all / unq all: 3024 7240 / 3148 7423
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-15]

2024-04-14T22:26:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8681330366 # 182
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-14
* notice: last 14d: unq all: 115 182
* notice: prev accum: outdated-unq outdated-all / unq all: 2902 7069 / 3024 7240
* notice: next accum: outdated-unq outdated-all / unq all: 3024 7240 / 3147 7422
* notice: prev exec diff / last date diff / accum: unq all: +123 +182 -0 -0 / +51 +76 -0 -0 / 51 76
* notice: removed / changed dates: [2024-02-22 2024-02-23 2024-02-24 2024-02-25 2024-02-26 2024-02-27 2024-02-28 2024-02-29 2024-03-01 2024-03-02 2024-03-03 2024-03-04 2024-03-05 2024-03-06 2024-03-07] / [2024-04-02 2024-04-04 2024-04-05 2024-04-09 2024-04-10 2024-04-11 2024-04-12 2024-04-13 2024-04-14]

2024-03-07T08:15:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8184952561 # 181
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-07
* notice: last 14d: unq all: 90 170
* notice: prev accum: outdated-unq outdated-all / unq all: 2902 7069 / 3012 7227
* notice: next accum: outdated-unq outdated-all / unq all: 2902 7069 / 3024 7240