@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-04-15T16:09:47Z",
-  "count_outdated" : 7240,
-  "uniques_outdated" : 3024,
-  "count" : 7423,
-  "uniques" : 3148,
+  "timestamp" : "2024-04-16T08:11:03Z",
+  "count_outdated" : 7241,
+  "uniques_outdated" : 3025,
+  "count" : 7424,
+  "uniques" : 3149,
   "clones" : [
-    {
-      "timestamp": "2024-04-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-04-04T00:00:00Z",
       "count": 1,
@@ -88,6 +79,15 @@
     },
     {
       "timestamp": "2024-04-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-04-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
